...
  String get shoppingEditQuantityLabel => 'Quantity / note';

  @override
  String get shoppingEditNameRequiredError => 'Name is required';

  @override
  String get shoppingUncategorized => 'Uncategorized';

  @override
  String shoppingCartHeader(int count) {
    String _temp0 = intl.Intl.pluralLogic(
      count,
      locale: localeName,
      other: 'In the cart ($count)',
      one: 'In the cart (1)',
    );
    return '$_temp0';
  }

  @override
  String get shoppingClearButton => 'Clear checked';
...
